# MadgineFirstParty

./: CMakeLists.txt  README.md
api/docs/: firstparty.rst
api/src/Madgine/: firstpartyforward.h
api/src/Madgine/firstparty/: firstpartyservices.cpp  firstpartyservices.h
epic/: CMakeLists.txt
epic/shared/: CMakeLists.txt
epic/shared/EOS/: CMakeLists.txt
epic/src/Madgine/firstparty/: eos_sender.h  epicservices.cpp  epicservices.h
googleplay/: CMakeLists.txt
googleplay/shared/: CMakeLists.txt
googleplay/shared/playservices/: playservices.h
googleplay/src/Madgine/firstparty/: googleplayservices.cpp  googleplayservices.h
mockup/: CMakeLists.txt
mockup/src/Madgine/: mockupliblib.h  mockupserviceslib.h
mockup/src/Madgine/firstparty/: mockupserver.cpp  mockupservices.cpp  mockupservices.h  mockupstate.cpp  mockupstate.h
steam/: CMakeLists.txt
steam/cmake/cpack/: steam.cmake
steam/cmake/cpack/steam/: app_build.vdf.in  cpack.cmake.in  depot_build.vdf.in  upload_build.bat.in
steam/shared/: CMakeLists.txt
steam/shared/steamworks/: CMakeLists.txt
steam/src/Madgine/firstparty/: steam_sender.h  steamservices.cpp  steamservices.h  steamstreambuf.cpp  steamstreambuf.h  steamsyncmanager.cpp  steamsyncmanager.h
